# uniAPI

./: README.md  pyproject.toml  schema_api.yaml
uni_api/: manage.py
uni_api/agid/: apps.py  serializers.py  urls.py  views.py
uni_api/api/: urls.py  views.py
uni_api/api/v1/: serializers.py  settings.py  urls.py  views.py
uni_api/uni_api/: .settings.py.swp  asgi.py  local_settings.py.example  settings.py  urls.py  wsgi.py
